# ipa_coverage_planning

./: .gitignore  README.md
coverage_path_planner/: CMakeLists.txt  package.xml
coverage_path_planner/include/coverage_path_planner/: coverage_path_planner.hpp
coverage_path_planner/src/: coverage_path_planner.cpp  main.cpp
ipa_building_common/: CMakeLists.txt  package.xml
ipa_building_common/include/: dynamic_reconfigure.h
ipa_building_common/src/: dynamic_reconfigure.cpp
ipa_building_msgs/: CMakeLists.txt  package.xml
ipa_building_navigation/: CMakeLists.txt  package.xml
ipa_building_navigation/common/include/ipa_building_navigation/: concorde_TSP.h  contains.h  genetic_TSP.h  nearest_neighbor_TSP.h
ipa_building_navigation/common/src/: genetic_TSP.cpp
ipa_building_navigation/ros/include/ipa_building_navigation/: room_sequence_planning_action_server.h
ipa_building_navigation/ros/src/: boosttest.cpp  room_sequence_planning_action_client.cpp  room_sequence_planning_action_server.cpp  room_sequence_planning_evaluation.cpp  tester.cpp
ipa_room_exploration/: CMakeLists.txt  package.xml
ipa_room_exploration/common/include/ipa_room_exploration/: boustrophedon_explorator.h  convex_sensor_placement_explorator.h  energy_functional_explorator.h  flow_network_explorator.h  grid_point_explorator.h  neural_network_explorator.h  room_rotator.h
ipa_room_exploration/common/src/: boustrophedon_explorator.cpp  convex_sensor_placement_explorator.cpp  energy_functional_explorator.cpp  flow_network_explorator.cpp  grid_point_explorator.cpp  map_accessibility_analysis.cpp  neural_network_explorator.cpp  room_rotator.cpp
ipa_room_exploration/ros/include/ipa_room_exploration/: coverage_check_server.h  dynamic_reconfigure_client.h  fov_to_robot_mapper.h  room_exploration_action_server.h
ipa_room_exploration/ros/launch/: room_exploration_action_client.py  room_exploration_action_server.py
ipa_room_exploration/ros/src/: coverage_check_server.cpp  coverage_check_server_main.cpp  coverage_monitor_server.cpp  fov_to_robot_mapper.cpp  room_exploration_action_client.cpp  room_exploration_action_server.cpp  room_exploration_evaluation.cpp
ipa_room_segmentation/: CMakeLists.txt  package.xml
ipa_room_segmentation/common/include/ipa_room_segmentation/: abstract_voronoi_segmentation.h  adaboost_classifier.h  contains.h  distance_segmentation.h  timer.h  voronoi_random_field_segmentation.h  voronoi_segmentation.h
ipa_room_segmentation/common/src/: adaboost_classifier.cpp  evaluation_segmentation.cpp  features.cpp  morphological_segmentation.cpp  segmentation_tester.cpp  voronoi_random_field_segmentation.cpp
ipa_room_segmentation/ros/include/ipa_room_segmentation/: dynamic_reconfigure_client.h  room_segmentation_server.h
ipa_room_segmentation/ros/launch/: room_segmentation_action_server.py
ipa_room_segmentation/ros/src/: evaluation_numeric_properties.cpp  room_segmentation_client.cpp  room_segmentation_server.cpp
ipa_room_segmentation/ros/test/: room_segmentation_action_client.py
