<?xml version="1.0"?>
<package format="3">
  <name>coverage_path_planner</name>
  <version>0.1.0</version>
  <description>coverage path planner</description>
  <maintainer email="albert@vibe.us">heartcontainer</maintainer>
  <author>albert</author>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav2_util</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>