<?xml version="1.0"?>
<package format="3">
	<name>ipa_building_common</name>
	<version>0.1.0</version>
	<description>common library</description>
	<maintainer email="albert@vibe.us">heartcontainer</maintainer>
	<author>albert</author>
	<license>LGPL</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclcpp</depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>