<?xml version="1.0"?>
<package format="3">
	<name>ipa_building_navigation</name>
	<version>0.1.0</version>
	<description>
    This package plans the navigation through the building in the autopnp-scenario. It includes:
    1. An A-star pathplanning algorithm for finding the shortest way between two points in a grid map.
    2. TSP-solving functions for minimal-time path planning in segmented maps. Includes nearest-neighbor, genetic solver, and Concorde-TSP-solver.
  </description>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<license>LGPL for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA</license>
	<url type="website">http://ros.org/wiki/ipa_building_navigation</url>
	<url type="repository">https://github.com/FraunhoferIPA/ipa_building_navigation</url>
	<url type="bugtracker">https://github.com/FraunhoferIPA/ipa_building_navigation/issues</url>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_action</depend>
	<depend>cv_bridge</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>geometry_msgs</depend>
	<depend>ipa_building_msgs</depend>
	<depend>libopencv-dev</depend>
	<depend>sensor_msgs</depend>
	<depend>visualization_msgs</depend>
	<!-- Optional dependencies -->
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<!-- Export section -->
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>