<?xml version="1.0"?>
<package format="3">
  <name>ipa_room_segmentation</name>
  <version>0.1.0</version>
  <description>
    Segmentation procedures for dividing floor maps into single rooms or areas.
    It contains five different algorithms for doing this:
      1. A morphological algorithm, which provides morphological operations on the map and finds the room-like areas with OpenCV. (common/src/morphological_segmentation.cpp)
      2. A distance-transformation based algorithm, which first produces a distance-transformed map using OpenCV, then takes a variable threshold over the map, coloring everything
         above it white, and finds the areas of the rooms in the threshold-map. (common/src/distance_segmentation.cpp)
      3. A voronoi-based algorithm, which produces a generalized voronoi-diagram in the map, finds critical points in an epsilon-neighborhood on the graph, and partitions the map with the
         borders through these critical points. (common/src/voronoi_segmentation.cpp)
      4. A semantic-labeling algorithm, which calculates simple single-valued features for a given position and classifies to which class (room, hallway) this position belongs using
         AdaBoost from OpenCV. (common/src/semantic_segmentation.cpp)
      5. A mix of the semantic-labeling and the voronoi-based algorithm, called voronoi-random-fields. It creates a conditional-random-field out of a pruned generalized Voronoi-graph
         and uses the weak-responses of the AdaBoost classifiers to find the best labels for each node. Advantage of this over the semantic labeling is that it can take care of
         neighbor-relations, which allows detecting doorways, as well as rooms and hallways. (common/src/voronoi_random_field_segmentation.cpp)
    For more detailed descriptions see the corresponding files. These algorithms often use OpenCV, so it's very important for these algorithms.
  </description>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
  <license>LGPL for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA</license>
  <url>http://wiki.ros.org/ipa_room_segmentation</url>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>boost</depend>
  <depend>cv_bridge</depend>
  <depend>ipa_building_msgs</depend>
  <depend>libdlib</depend>
  <depend>opencv</depend>
  <depend>nav_msgs</depend>
  <depend>opengm</depend>
  <depend>sensor_msgs</depend>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
